Change adding todos from click to submit

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <script src="todoApp.js"></script>
 </head>
 <body>
-    <div id="to-do-list-container">
-        <form>
-            <input id="to-do-input" type="text" placeholder="What do you need to do?">
+    <div id="todo-list-container">
+        <form action="" id="todo-form">
+            <input id="todo-input" type="text" placeholder="What do you need to do?">
             <ul id="todos">
                 <li>Nothing yet here.</li>
             </ul>
-            <input id="add-to-do-btn" type="button" value="Add todo"><!-- disabled="true">-->
+            <input id="add-todo-btn" type="submit" value="Add todo" disabled><!-- disabled="true">-->
         </form>
     </div>
 </body>
