Add removing todo functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <form action="" id="todo-form">
             <input id="todo-input" type="text" placeholder="What do you need to do?">
             <ul id="todos">
-                <li>Nothing yet here.</li>
+                <li id="dummy-todo">Nothing to do yet.</li>
             </ul>
             <input id="add-todo-btn" type="submit" value="Add todo" disabled><!-- disabled="true">-->
         </form>
